[tool.poetry]
name = "euler"
version = "0.1.0"
description = ""
authors = ["Christopher Chen <christopher.chen1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
EasyEuler = "^1.2.1"
EulerPy = "^1.4.0"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
